# gaia

./: .gitignore  CHECKLIST.md  Cargo.toml  README.md  agents.md  diff.txt  err.txt  gap_audit.md  output_asym.txt  output_t.txt  output_y.txt  output_y4.txt
.claude/: settings.local.json
benches/: csg_performance.rs
crates/cfd-mesh/: .gitignore  Cargo.toml  agents.md
crates/cfd-mesh/benches/: csg_performance.rs
crates/cfd-mesh/examples/: bifurcation_delaunay_3d.rs  check_2d_seam.rs  csg_dump.rs  debug_stl.rs  delaunay_3d_demo.rs  delaunay_demo.rs  schematic_to_3d_mesh.rs  schematic_to_mesh_demo.rs  schematic_to_openfoam.rs  serpentine_delaunay_3d.rs  tpms_blood_chip_mesh.rs
crates/cfd-mesh/examples/csg/: compound.rs  cube_cube.rs  cube_cylinder.rs  cube_cylinder_coplanar.rs  cube_sphere.rs  cylinder_cylinder.rs  cylinder_cylinder_asymmetric.rs  cylinder_cylinder_l_shape.rs  cylinder_cylinder_pentafurcation.rs  cylinder_cylinder_perpendicular.rs  cylinder_cylinder_quadfurcation.rs  cylinder_cylinder_symmetric.rs  cylinder_cylinder_t_junction.rs  cylinder_cylinder_trifurcation.rs  cylinder_cylinder_y_junction.rs  difference.rs  intersection.rs  sphere_cylinder.rs  sphere_sphere.rs  union.rs
crates/cfd-mesh/examples/csg_coplanar/: disk_disk.rs
crates/cfd-mesh/examples/millifluidic/: millifluidic_shell_tpms.rs  sbs_96_well_plate.rs
crates/cfd-mesh/examples/primitives/: antiprism.rs  biconcave_disk.rs  capsule.rs  cone.rs  cube.rs  cuboctahedron.rs  cylinder.rs  disk.rs  dodecahedron.rs  elbow.rs  ellipsoid.rs  fischer_koch_cy_sphere.rs  frd_sphere.rs  frustum.rs  geodesic_sphere.rs  gyroid_sphere.rs  helix_sweep.rs  icosahedron.rs  iwp_sphere.rs  lidinoid_sphere.rs  linear_sweep.rs  neovius_sphere.rs  octahedron.rs  pipe.rs  pyramid.rs  revolution_sweep.rs  rounded_cube.rs  schwarz_d_sphere.rs  schwarz_p_sphere.rs  serpentine_tube.rs  sphere.rs  spherical_shell.rs  split_p_sphere.rs  stadium_prism.rs  tetrahedron.rs  torus.rs  truncated_icosahedron.rs  venturi.rs  y_junction.rs
crates/cfd-mesh/fuzz/: Cargo.toml
crates/cfd-mesh/fuzz/fuzz_targets/: fuzz_read_stl.rs  fuzz_read_stl_he.rs
crates/cfd-mesh/src/: lib.rs
crates/cfd-mesh/src/application/channel/: junction.rs  mod.rs  serpentine.rs
crates/cfd-mesh/src/application/csg/: boolean_solid.rs  corefine.rs  diagnostics.rs  mod.rs
crates/cfd-mesh/src/application/csg/arrangement/: adversarial_tests_2.rs  boolean_csg_tests.rs  classify.rs  curvature_refine.rs  degeneracy_stress_tests.rs  gwn.rs  gwn_bvh.rs  gwn_robustness_tests.rs  multi_mesh_resolution.rs  patch.rs  planar.rs  seam.rs  tests.rs  tiebreaker.rs
crates/cfd-mesh/src/application/csg/boolean/: indexed.rs  operations.rs  tree.rs
crates/cfd-mesh/src/application/csg/clip/: halfspace.rs
crates/cfd-mesh/src/application/csg/clip/polygon2d/: geometry.rs
crates/cfd-mesh/src/application/csg/coplanar/: operations.rs
crates/cfd-mesh/src/application/csg/intersect/: exact.rs  segment.rs  types.rs
crates/cfd-mesh/src/application/delaunay/: mod.rs
crates/cfd-mesh/src/application/delaunay/dim2/constraint/: enforce.rs
crates/cfd-mesh/src/application/delaunay/dim2/pslg/: graph.rs  mod.rs  vertex.rs
crates/cfd-mesh/src/application/delaunay/dim2/refinement/: circumcenter.rs  encroachment.rs  metric.rs  quality.rs  ruppert.rs
crates/cfd-mesh/src/application/delaunay/dim2/smoothing/: laplacian.rs
crates/cfd-mesh/src/application/delaunay/dim2/tests/: adjacency_tests.rs  adversarial_cdt_pslg_tests.rs  delaunay_tests.rs  mod.rs
crates/cfd-mesh/src/application/delaunay/dim2/triangulation/: adjacency.rs  bowyer_watson.rs
crates/cfd-mesh/src/application/delaunay/dim3/: mod.rs  tetrahedralize.rs
crates/cfd-mesh/src/application/hierarchy/: hierarchical_mesh.rs
crates/cfd-mesh/src/application/pipeline/: mod.rs  topology.rs
crates/cfd-mesh/src/application/quality/: curvature.rs  histograms.rs  metrics.rs  mod.rs  normals.rs  triangle.rs  validation.rs
crates/cfd-mesh/src/application/watertight/: check.rs  repair.rs  seal.rs
crates/cfd-mesh/src/application/welding/: mod.rs
crates/cfd-mesh/src/domain/: mod.rs
crates/cfd-mesh/src/domain/core/: constants.rs  index.rs  scalar.rs
crates/cfd-mesh/src/domain/geometry/: aabb.rs  measure.rs  mod.rs  normal.rs  predicates.rs
crates/cfd-mesh/src/domain/geometry/nurbs/: curve.rs  knot.rs  mod.rs  tessellate.rs
crates/cfd-mesh/src/domain/geometry/primitives/: biconcave_disk.rs  capsule.rs  cone.rs  cube.rs  cuboctahedron.rs  dodecahedron.rs  fischer_koch_cy_sphere.rs  frd_sphere.rs  frustum.rs  gyroid_sphere.rs  icosahedron.rs  iwp_sphere.rs  lidinoid_sphere.rs  linear_sweep.rs  mod.rs  neovius_sphere.rs  pipe.rs  revolution_sweep.rs  rounded_cube.rs  schwarz_d_sphere.rs  schwarz_p_sphere.rs  split_p_sphere.rs  tetrahedron.rs  y_junction.rs
crates/cfd-mesh/src/domain/geometry/tpms/: box_clip.rs  fischer_koch_cy.rs  lidinoid.rs  marching_cubes.rs  mod.rs  neovius.rs  schwarz_d.rs  split_p.rs
crates/cfd-mesh/src/domain/mesh/: indexed.rs
crates/cfd-mesh/src/domain/topology/: adjacency.rs  connectivity.rs  halfedge.rs
crates/cfd-mesh/src/infrastructure/: mod.rs
crates/cfd-mesh/src/infrastructure/io/: dxf.rs  gltf_export.rs  mod.rs  obj.rs  openfoam.rs  ply.rs  stl.rs  three_mf.rs  vtk.rs
crates/cfd-mesh/src/infrastructure/permission/: mod.rs
crates/cfd-mesh/src/infrastructure/spatial/bvh/: build.rs  geo.rs  mod.rs  node.rs
crates/cfd-mesh/src/infrastructure/spatial/ssvdag/: boolean.rs  core.rs  rasterize.rs
crates/cfd-mesh/src/infrastructure/storage/: attribute.rs  cell_store.rs  edge_store.rs  pool.rs  slotmap_pool.rs
crates/cfd-mesh/tests/: blueprint_pipeline.rs  csg_regressions.rs  debug_volume.rs  diag_cube_cube.rs
docs/: algorithm_audit_2026-03-03.md  clipping_audit_2026-03-03.md
examples/: bifurcation_delaunay_3d.rs  check_2d_seam.rs  csg_dump.rs  debug_stl.rs  delaunay_3d_demo.rs  delaunay_demo.rs  schematic_to_3d_mesh.rs  schematic_to_mesh_demo.rs  schematic_to_openfoam.rs  serpentine_delaunay_3d.rs
fuzz/: Cargo.toml
outputs/: both_tests.txt  csg_example_list.txt  tj4.txt  (+9 more)
(+460 files in other folders)
