[package]
name = "cfd-mesh"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
description = "Watertight CFD mesh generation for millifluidic devices — GhostCell-permissioned, indexed, BSP-based"
keywords = ["mesh", "cfd", "millifluidic", "watertight", "ghostcell"]
categories = ["science", "simulation"]
autoexamples = false

[features]
default = []
millifluidic = []
parallel = ["dep:rayon"]
cfdrs-integration = ["dep:cfd-schematics"]

stl-io = []
vtk-io = []
three-mf-io = ["dep:zip"]
# Preserve the legacy scheme-io knob, but route it through the broader CFDrs bridge.
scheme-io = ["cfdrs-integration"]

[dependencies]
# Math
nalgebra = { workspace = true }
num-traits = { workspace = true }
approx = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Data structures
indexmap = { workspace = true }
slotmap = { workspace = true }

# Mesh / geometry — state-of-the-art kernel
geometry-predicates = { workspace = true }
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Hashing
hashbrown = "0.15"

# Parallelism (optional)
rayon = { workspace = true, optional = true }

# 3MF export (optional)
zip = { version = "2.0", optional = true }

# CFDrs integration crates
cfd-schematics = { workspace = true, optional = true }

# Logging
tracing = { workspace = true }

# Documentation diagrams
aquamarine = { workspace = true }
rand.workspace = true

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
nalgebra = { workspace = true }

# ── Benchmarks ─────────────────────────────────────────────────────────────────

[[bench]]
name = "csg_performance"
path = "benches/csg_performance.rs"
harness = false

# ── Primitive validation examples ─────────────────────────────────────────────

[[example]]
name = "primitives_tetrahedron"
path = "examples/primitives/tetrahedron.rs"

[[example]]
name = "primitives_cube"
path = "examples/primitives/cube.rs"

[[example]]
name = "primitives_sphere"
path = "examples/primitives/sphere.rs"

[[example]]
name = "primitives_gyroid_sphere"
path = "examples/primitives/gyroid_sphere.rs"

[[example]]
name = "primitives_schwarz_p_sphere"
path = "examples/primitives/schwarz_p_sphere.rs"

[[example]]
name = "primitives_schwarz_d_sphere"
path = "examples/primitives/schwarz_d_sphere.rs"

[[example]]
name = "primitives_cylinder"
path = "examples/primitives/cylinder.rs"

[[example]]
name = "primitives_cone"
path = "examples/primitives/cone.rs"

[[example]]
name = "primitives_torus"
path = "examples/primitives/torus.rs"

[[example]]
name = "primitives_venturi"
path = "examples/primitives/venturi.rs"

[[example]]
name = "primitives_linear_sweep"
path = "examples/primitives/linear_sweep.rs"

[[example]]
name = "primitives_revolution_sweep"
path = "examples/primitives/revolution_sweep.rs"

[[example]]
name = "primitives_octahedron"
path = "examples/primitives/octahedron.rs"

[[example]]
name = "primitives_icosahedron"
path = "examples/primitives/icosahedron.rs"

[[example]]
name = "primitives_ellipsoid"
path = "examples/primitives/ellipsoid.rs"

[[example]]
name = "primitives_frustum"
path = "examples/primitives/frustum.rs"

[[example]]
name = "primitives_capsule"
path = "examples/primitives/capsule.rs"

[[example]]
name = "primitives_pipe"
path = "examples/primitives/pipe.rs"

[[example]]
name = "primitives_elbow"
path = "examples/primitives/elbow.rs"

[[example]]
name = "primitives_biconcave_disk"
path = "examples/primitives/biconcave_disk.rs"

[[example]]
name = "primitives_spherical_shell"
path = "examples/primitives/spherical_shell.rs"

[[example]]
name = "primitives_stadium_prism"
path = "examples/primitives/stadium_prism.rs"

[[example]]
name = "primitives_dodecahedron"
path = "examples/primitives/dodecahedron.rs"

[[example]]
name = "primitives_geodesic_sphere"
path = "examples/primitives/geodesic_sphere.rs"

[[example]]
name = "primitives_helix_sweep"
path = "examples/primitives/helix_sweep.rs"

[[example]]
name = "primitives_rounded_cube"
path = "examples/primitives/rounded_cube.rs"

[[example]]
name = "primitives_cuboctahedron"
path = "examples/primitives/cuboctahedron.rs"

[[example]]
name = "primitives_pyramid"
path = "examples/primitives/pyramid.rs"

[[example]]
name = "primitives_antiprism"
path = "examples/primitives/antiprism.rs"

[[example]]
name = "primitives_truncated_icosahedron"
path = "examples/primitives/truncated_icosahedron.rs"

[[example]]
name = "primitives_disk"
path = "examples/primitives/disk.rs"

[[example]]
name = "primitives_neovius_sphere"
path = "examples/primitives/neovius_sphere.rs"

[[example]]
name = "primitives_lidinoid_sphere"
path = "examples/primitives/lidinoid_sphere.rs"

[[example]]
name = "primitives_iwp_sphere"
path = "examples/primitives/iwp_sphere.rs"

[[example]]
name = "primitives_split_p_sphere"
path = "examples/primitives/split_p_sphere.rs"

[[example]]
name = "primitives_frd_sphere"
path = "examples/primitives/frd_sphere.rs"

[[example]]
name = "primitives_fischer_koch_cy_sphere"
path = "examples/primitives/fischer_koch_cy_sphere.rs"

# ── CSG boolean operation examples ────────────────────────────────────────────

[[example]]
name = "csg_cube_cube"
path = "examples/csg/cube_cube.rs"

[[example]]
name = "csg_cube_sphere"
path = "examples/csg/cube_sphere.rs"

[[example]]
name = "csg_cube_cylinder"
path = "examples/csg/cube_cylinder.rs"

[[example]]
name = "csg_cube_cylinder_coplanar"
path = "examples/csg/cube_cylinder_coplanar.rs"

[[example]]
name = "csg_sphere_cylinder"
path = "examples/csg/sphere_cylinder.rs"

[[example]]
name = "csg_sphere_sphere"
path = "examples/csg/sphere_sphere.rs"

[[example]]
name = "csg_cylinder_cylinder"
path = "examples/csg/cylinder_cylinder.rs"

[[example]]
name = "csg_cylinder_cylinder_symmetric"
path = "examples/csg/cylinder_cylinder_symmetric.rs"

[[example]]
name = "csg_cylinder_cylinder_asymmetric"
path = "examples/csg/cylinder_cylinder_asymmetric.rs"

[[example]]
name = "csg_cylinder_cylinder_l_shape"
path = "examples/csg/cylinder_cylinder_l_shape.rs"

[[example]]
name = "csg_cylinder_cylinder_perpendicular"
path = "examples/csg/cylinder_cylinder_perpendicular.rs"

[[example]]
name = "csg_cylinder_cylinder_t_junction"
path = "examples/csg/cylinder_cylinder_t_junction.rs"

[[example]]
name = "csg_cylinder_cylinder_y_junction"
path = "examples/csg/cylinder_cylinder_y_junction.rs"

[[example]]
name = "csg_cylinder_cylinder_trifurcation"
path = "examples/csg/cylinder_cylinder_trifurcation.rs"

[[example]]
name = "csg_cylinder_cylinder_quadfurcation"
path = "examples/csg/cylinder_cylinder_quadfurcation.rs"

[[example]]
name = "csg_cylinder_cylinder_pentafurcation"
path = "examples/csg/cylinder_cylinder_pentafurcation.rs"

# ── Coplanar 2-D Boolean examples ──────────────────────────────────────────────

[[example]]
name = "csg_coplanar_disk_disk"
path = "examples/csg_coplanar/disk_disk.rs"

[[example]]
name = "check_2d_seam"
path = "examples/check_2d_seam.rs"

[[example]]
name = "csg_dump"
path = "examples/csg_dump.rs"

[[example]]
name = "debug_stl"
path = "examples/debug_stl.rs"

[[example]]
name = "delaunay_demo"
path = "examples/delaunay_demo.rs"

[[example]]
name = "schematic_to_3d_mesh"
path = "examples/schematic_to_3d_mesh.rs"
required-features = ["cfdrs-integration"]

[[example]]
name = "schematic_to_mesh_demo"
path = "examples/schematic_to_mesh_demo.rs"
required-features = ["cfdrs-integration"]

[[example]]
name = "schematic_to_openfoam"
path = "examples/schematic_to_openfoam.rs"
required-features = ["cfdrs-integration"]


[[example]]
name = "millifluidic_shell_tpms"
path = "examples/millifluidic/millifluidic_shell_tpms.rs"
required-features = ["cfdrs-integration"]

[[example]]
name = "sbs_96_well_plate"
path = "examples/millifluidic/sbs_96_well_plate.rs"

[[example]]
name = "tpms_blood_chip_mesh"
path = "examples/tpms_blood_chip_mesh.rs"

[[example]]
name = "delaunay_3d_demo"
path = "examples/delaunay_3d_demo.rs"

[[example]]
name = "bifurcation_delaunay_3d"
path = "examples/bifurcation_delaunay_3d.rs"

[[example]]
name = "serpentine_delaunay_3d"
path = "examples/serpentine_delaunay_3d.rs"
